Fixed poll submit button where on mobile you need another swipe to see the button.

--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -148,7 +148,8 @@ span {
 .poll-sbmt-btn{
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    
 }
 
 .submit-btn {
@@ -199,7 +200,7 @@ span {
 }
 
 .poll-sbmt-btn{
-    padding-bottom: 10px;
+    padding-bottom: 50px;
 }
 
 
